[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phsh"
version = "0.1.0"
description = "Minimal password hashing for Python"
authors = [
    {name="Del", email="wendellmesia@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
argon2 = ["argon2-cffi >=23.1.0,<26"]
bcrypt = ["bcrypt >=4.1.2,<6"]
all = ["argon2-cffi >=23.1.0,<26", "bcrypt >=4.1.2,<6"]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
